# python-clang2

./: .gitignore  README.md  llvm_version.cmake  pyproject.toml
.github/workflows/: publish.yml  test-build.yml
