[build-system]
requires = ["scikit-build-core"]
build-backend = "scikit_build_core.build"

[project]
name = "clang2"
description = "libclang python bindings"
readme = "README.md"
license = { text = "Apache-2.0 with LLVM exception" }
authors = [
    { name = "LLVM team" },
    { name = "elijahr", email = "elijahr+clang@gmail.com" }
]
maintainers = [
    { name = "elijahr", email = "elijahr+clang@gmail.com" }
]
keywords = ["llvm", "clang", "libclang"]
classifiers = [
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Development Status :: 5 - Production/Stable",
    "Topic :: Software Development :: Compilers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
requires-python = ">=3.9"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/elijahr/python-clang2"
Repository = "https://github.com/elijahr/python-clang2"
Documentation = "https://clang.llvm.org/docs/Tooling.html#libclang"
Changelog = "https://releases.llvm.org/"
"Bug Tracker" = "https://github.com/elijahr/python-clang2/issues"

[tool.scikit-build]
wheel.py-api = "py3"
wheel.platlib = false
wheel.license-files = []

[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "llvm_version.cmake"
regex = '''(?sx)
set\(\s*LLVM_VERSION\s+(?P<version>\d+(?:\.\d+)+)\s*\)
'''
result = "{version}"
